remove deprecated api calls, endpoints and business logic
