# server/generated/openapi_server/models/__init__.py
@@ -3,13 +3,7 @@
 # import models into model package
 from openapi_server.models.behavior import Behavior
 from openapi_server.models.command_get200_response import CommandGet200Response
-from openapi_server.models.command_listen_keyword_post200_response import CommandListenKeywordPost200Response
-from openapi_server.models.command_listen_keyword_post_request import CommandListenKeywordPostRequest
-from openapi_server.models.command_listen_silence_post200_response import CommandListenSilencePost200Response
-from openapi_server.models.command_listen_silence_post_request import CommandListenSilencePostRequest
 from openapi_server.models.command_run_dialog_post200_response import CommandRunDialogPost200Response
-from openapi_server.models.command_speak_post200_response import CommandSpeakPost200Response
-from openapi_server.models.command_speak_post_request import CommandSpeakPostRequest
 from openapi_server.models.dialog_command import DialogCommand
 from openapi_server.models.dialog_request import DialogRequest
 from openapi_server.models.pair_post200_response import PairPost200Response
