# server/generated/openapi_server/models/command_listen_keyword_post200_response.py
@@ -1,60 +1,0 @@
-# coding: utf-8
-
-from datetime import date, datetime
-
-from typing import List, Dict, Type
-
-from openapi_server.models.base_model import Model
-from openapi_server import util
-
-
-class CommandListenKeywordPost200Response(Model):
-    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
-
-    Do not edit the class manually.
-    """
-
-    def __init__(self, received_command: str=None):
-        """CommandListenKeywordPost200Response - a model defined in OpenAPI
-
-        :param received_command: The received_command of this CommandListenKeywordPost200Response.
-        """
-        self.openapi_types = {
-            'received_command': str
-        }
-
-        self.attribute_map = {
-            'received_command': 'received_command'
-        }
-
-        self._received_command = received_command
-
-    @classmethod
-    def from_dict(cls, dikt: dict) -> 'CommandListenKeywordPost200Response':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :return: The _command_listenKeyword_post_200_response of this CommandListenKeywordPost200Response.
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def received_command(self):
-        """Gets the received_command of this CommandListenKeywordPost200Response.
-
-
-        :return: The received_command of this CommandListenKeywordPost200Response.
-        :rtype: str
-        """
-        return self._received_command
-
-    @received_command.setter
-    def received_command(self, received_command):
-        """Sets the received_command of this CommandListenKeywordPost200Response.
-
-
-        :param received_command: The received_command of this CommandListenKeywordPost200Response.
-        :type received_command: str
-        """
-
-        self._received_command = received_command
