# server/generated/openapi_server/models/command_listen_silence_post_request.py
@@ -1,88 +1,0 @@
-# coding: utf-8
-
-from datetime import date, datetime
-
-from typing import List, Dict, Type
-
-from openapi_server.models.base_model import Model
-from openapi_server.models.style import Style
-from openapi_server import util
-
-
-class CommandListenSilencePostRequest(Model):
-    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
-
-    Do not edit the class manually.
-    """
-
-    def __init__(self, robot_id: str=None, style: Style=None):
-        """CommandListenSilencePostRequest - a model defined in OpenAPI
-
-        :param robot_id: The robot_id of this CommandListenSilencePostRequest.
-        :param style: The style of this CommandListenSilencePostRequest.
-        """
-        self.openapi_types = {
-            'robot_id': str,
-            'style': Style
-        }
-
-        self.attribute_map = {
-            'robot_id': 'robot_id',
-            'style': 'style'
-        }
-
-        self._robot_id = robot_id
-        self._style = style
-
-    @classmethod
-    def from_dict(cls, dikt: dict) -> 'CommandListenSilencePostRequest':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :return: The _command_listenSilence_post_request of this CommandListenSilencePostRequest.
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def robot_id(self):
-        """Gets the robot_id of this CommandListenSilencePostRequest.
-
-        The unique identifier for the robot
-
-        :return: The robot_id of this CommandListenSilencePostRequest.
-        :rtype: str
-        """
-        return self._robot_id
-
-    @robot_id.setter
-    def robot_id(self, robot_id):
-        """Sets the robot_id of this CommandListenSilencePostRequest.
-
-        The unique identifier for the robot
-
-        :param robot_id: The robot_id of this CommandListenSilencePostRequest.
-        :type robot_id: str
-        """
-
-        self._robot_id = robot_id
-
-    @property
-    def style(self):
-        """Gets the style of this CommandListenSilencePostRequest.
-
-
-        :return: The style of this CommandListenSilencePostRequest.
-        :rtype: Style
-        """
-        return self._style
-
-    @style.setter
-    def style(self, style):
-        """Sets the style of this CommandListenSilencePostRequest.
-
-
-        :param style: The style of this CommandListenSilencePostRequest.
-        :type style: Style
-        """
-
-        self._style = style
